--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
+    "react-leaflet": "^3.1.0",
     "react-moment": "^1.1.1",
     "react-odometerjs": "^2.1.1",
     "react-router": "^5.2.0",
