--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "novelcovid": "^3.0.0",
+    "papaparse": "^5.3.0",
     "react": "^17.0.1",
     "react-animejs": "^0.5.4",
     "react-apexcharts": "^1.3.7",
